# BRouge

./: .gitignore  CHANGELOG.md  Cargo.toml  LIBRARIES.md  LICENSE.md  README.md
.github/workflows/: deploy-web-preview.yml  deploy-web-production.yml  docs.yml  rust.yml  unit-tests.yml
config/: input.json  window.json
scripts/: build_native.sh  build_wasm.sh  copy_resources_to_target.sh
src/: main.rs
src/components/: ascii_sprite.rs  collision.rs  coord_2d.rs  enemy_type.rs  fov.rs  game_map.rs  game_terminal.rs  mod.rs  name_tag.rs  npc_state.rs  player.rs  state_label.rs
src/core/: algorithm.rs  app_state.rs  constants.rs  dimension_2d.rs  fov_algorithm.rs  mod.rs  plugin_provider.rs  position_2d.rs  rectangle.rs  rng.rs  tile.rs  var_args.rs  view.rs
src/entities/: mod.rs  monster_factory.rs  player_bundle.rs  player_factory.rs  terminal_factory.rs
src/js/: local_storage.rs  mod.rs
src/os/: file_system.rs  mod.rs
src/plugins/: bootstrap_plugin.rs  game_state_plugin.rs  mod.rs  plugin_provider.rs  states.rs
src/plugins/game_state_systems/: enemy_ai.rs  fov.rs  graphics.rs  input.rs  lifecycle.rs  mod.rs
src/res/: config_file.rs  input_config.rs  mod.rs  window_config.rs
src/ui/: colors.rs  game_map.rs  mod.rs  rectangle.rs  tile.rs  tile_map.rs  tile_map_layout_generator.rs
web/: index.html
web/bridge/: storage.js
